...
            customBottomWidget: InputWidget(
              micCallback: _startListening,
              onSendMessage: sendMessage,
            ),
            emptyState: Center(
              child: Text(
                "Bob ist bereit deine Fragen zu beantworten!",
                style: Theme.of(context).textTheme.bodyLarge,
              ),
            ),
            groupMessagesThreshold: 5000,
            messages: _messages,
            user: _thisUser,
...
                  child: Align(
                    alignment: Alignment.centerRight,
                    child: TextButton(
                      onPressed: () => setState(() {
                        _showExtendedInput = true;
                      }),
                      child: const Text("Ich möchte schreiben"),
                      style: TextButton.styleFrom(
                        primary: Colors.white54,
                      ),
                    ),
                  ),
                ),
...
